--- a/app/src/main/res/layout/servey_item_layout.xml
+++ b/app/src/main/res/layout/servey_item_layout.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="4dp"
         card_view:cardUseCompatPadding="true"
         card_view:contentPadding="10dp">
 
@@ -21,18 +20,18 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="1">
 
             <ImageView
                 android:id="@+id/imageView10"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:src="@drawable/dealerpicture" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"
                 android:orientation="vertical">
 
                 <TextView
@@ -41,7 +40,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:text="Medium Text"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textColor="@color/blue_light"
                     android:textStyle="bold" />
 
@@ -50,8 +48,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:text="Small Text"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:lines="3"
+                    android:text="fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff" />
             </LinearLayout>
 
             <TextView
