--- a/app/src/main/res/layout/add_dealer_layout.xml
+++ b/app/src/main/res/layout/add_dealer_layout.xml
@@ -76,6 +76,7 @@
             android:layout_height="fill_parent"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
+            android:visibility="gone"
             android:layout_marginTop="5dp">
 
             <TextView
@@ -100,6 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="15dp"
+            android:visibility="gone"
             android:layout_marginRight="15dp"
             android:layout_marginTop="5dp">
 
